[package]
name = "gitrepoman"
version = "0.1.0"
description = "Utility for managing git projects on Github or Gitlab"
license-file = "LICENSE"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/gitrepoman"
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Murphy <mmstickman@gmail.com>"
]

[dependencies]
gitlab = "0.1008.0"
serde = "1.0.66"
toml = "0.4.6"
serde_derive = "1.0.66"
failure = "0.1.1"
failure_derive = "0.1.1"
github-rs = "0.6.1"
serde_json = "1.0.20"
rayon = "1.0.1"
clap = "2.31.2"
