[package]
name = "gitrepoman"
version = "0.1.0"
description = "Utility for managing git projects on Github or Gitlab"
license-file = "LICENSE"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/gitrepoman"
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Murphy <mmstickman@gmail.com>"
]

[dependencies]
gitlab = "0.1206.0"
serde = "1.0.104"
toml = "0.5.6"
serde_derive = "1.0.104"
failure = "0.1.6"
failure_derive = "0.1.6"
github-rs = "0.7.0"
serde_json = "1.0.44"
rayon = "1.3.0"
clap = "2.33.0"
